# cpp_study_repo

./: CMakeLists.txt  README.md  jiraconfig.txt
src/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  DataPreparation.cpp  DataPreparation.h  main.cpp
